# ravi-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: linear-ir.md
docs/cfg/: for1.gv  for1.input  for2.gv  for2.input  for3.gv  for3.input  for4.gv  for4.input  gencfg.sh  if1.gv  if1.input  if2.gv  if2.input  if3.gv  if3.input  if4-goto.gv  if4-goto.input  log1.gv  log1.input  log2.gv  log2.input  log3.gv  log3.input  log4.gv  log4.input  log5.gv  log5.input  repeat1.gv  repeat1.input  while1.gv  while1.input  while2.gv  while2.input
examples/: README.md  gaussian2_aot.lua  gaussian2_aot.sh  gaussian2_lib.c  gaussian2_lib.lua  matrixmul_aot.lua  matrixmul_aot.sh  matrixmul_lib.c  sieve_aot.lua  sieve_lib.c
include/: port.h  ravi_api.h  ravi_compiler.h
src/: README.md  allocate.c  allocate.h  ast_lower.c  ast_printer.c  ast_printer_n.c  ast_simplify.c  ast_walker.c  bitset.c  bitset.h  cfg.c  cfg.h  chibicc.h  chibicc_hashmap.c  chibicc_parse.c  chibicc_strings.c  chibicc_tokenize.c  chibicc_type.c  chibicc_unicode.c  codegen.c  codegen.h  dataflow_framework.c  dataflow_framework.h  df_liveness.c  dominator.c  dominator.h  fnv_hash.h  graph.c  graph.h  hash_table.c  hash_table.h  implementation.h  int_set.c  int_set.h  lex.c  lexer.c  linearize.c  linearizer.c  linearizer.h  lua_defs.h  (+15 more)
src/chibicc/: chibicc.h  chibicc_hashmap.c  chibicc_parse.c  chibicc_tokenize.c  chibicc_type.c  chibicc_unicode.c
tests/: README.md  ravi_alloc.c  runtests.sh  runtparse.sh  tastwalk.c  tchibicc.c  tcommon.c  tcommon.h  tgraph.c  tmisc.c  tparse.c  trun.c  truntests.sh  tstrset.c
tests/expected/: results.expected  t00_exprs.expected  t01_globals.expected  t02_locals.expected  t03_types.expected  t04_stmts_1.expected  t05_upvals.expected  t06_close.expected  t07_concat.expected  t08_genericfor.expected  t09_bugs.expected  t10_embed_C.expected  tgraph.expected
tests/input/: 01_bug.lua  02_bug.lua  03_bug.lua  04_bug.lua  05_bug.lua  07_bug.lua  08_bug.lua  09_bug.lua  10_bug.lua  t001.lua  t002.lua  t003.lua  t004.lua  t005.lua  t006.lua  t007.lua  t008.lua  t009.lua  t00_exprs.in  t010.lua  t011.lua  t012.lua  t013.lua  t014.lua  t015_sieve.lua  t016_ifelse.lua  t01_globals.in  t02_locals.in  t03_types.in  t04_stmts_1.in  t05_upvals.in  t06_close.in  t07_concat.in  t08_genericfor.in  t09_bugs.in  t10_embed_C.in  testinput1.bat  testinput1.out
utils/: tokenenum.h  tokenmacro.h  tokenstr.h
